fixed text-align

--- a/src/styleElements/login.css
+++ b/src/styleElements/login.css
@@ -1,81 +1,318 @@
-/* * {
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Poppins', sans-serif;
-} */
-#ramb {
-    display: flex;
-}
-#ram {
+#loginleft {
     background-color: #1a8db4;
-    height: 100vh;
+    height: 80vh;
     width: 50vw;
-}
-#shyam {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  }
+#loginright {
     background-color: aliceblue;
-    height: 100vh;
+    height: 80vh;
     width: 50vw;
 }
-#krishna {
-    height: 100vh;
-    background-color: azure;
-    margin-top: 0vh;
-    margin-left: 16vw;
+#account{
+    text-align: center;
+    font-size: x-large;
+}
+#loginright img{
+    height: 80vh;
+    margin-top: 0px;
+}
+#loginmainleft {
+       height: 80vh;
+     width: 34vw;
+     margin-left: 16vw;
+      background-color: azure;
     display: flex;
     align-items: top;
     justify-content: center;
+    box-sizing: border-box;
 }
 #medlink {
-    height: 11vw;
+    height: 15vh;
+    width: 100%;
+    display: flex;
+    text-align: center;
+    align-items: center;  
+}
+#medlink img {
+    margin-left: 4vw;
+    height: 100%;
+}
+#ima {
+    width: 100%;
 }
 #login {
-    margin-top: 0vh;
-    height: 100vh;
+    margin-top: 11vh;
+    height: 58vh;
     width: 34vw;
 }
-#ram h2 {
+.loginlabel{
+      position: absolute;
+}
+#passBtn{
+    position: relative;
+    left: -10vw;
+    top:-5px;
+
+}
+h1{
     justify-content: center;
     padding-left: 7vw;
     margin-left: 1.3vw;
 }
-#ram input {
-    margin-top: 0px;
-    margin-left: 3vw;
-    font-size: medium;
-    text-align: center;
+input {
+       margin-left: 2vw;
+    font-size: large;
+color: black;
+    text-align: left; /* Center-align text within the input field */
+padding-right: 2vw;
 }
-#ram label {
-    margin-left: 3vw;
+label {
+    margin-left:2vw;
+    font-size: large;
 }
-#userid, #password, #Cpassword {
-    width: 80%;
+#userid{
+/* width: 300px; */
 }
-#ram button {
+button{
     margin-left: 6vw;
     margin-top: 1vh;
     justify-content: center;
-}
-#show {
-    margin-top: 5px;
-    cursor: pointer;
-}
-#showLabel {
-    display: flex;
-    align-items: center;
+    /* position: ; */
 }
 #show{
+/* margin-top: 20px; */
+position: relative;
+    right: 90px;
+}
+#or{
+    margin-left: 8vw;
+}
+
+i{
     position: relative;
     right: 65px;
+    z-index: 2;
+    top: 6px;
 }
-#showC{
+span{
     position: relative;
-    right: 65px;
+    right: 5vw;
+    z-index: 2;
+    top: 4px;
 }
-.gen{
-    display: inline;
-    margin-left: 50px;
-    font-size:medium;
+#main{
+    display: flex;
 }
-#ram h4{
-    display: inline;
+  #or{
+    font-size: x-large;
+    display: block;
+ text-align: center;
+ margin-left: 1px;
+  }
+h2{
+justify-content: center;
+margin-left: 3.7vw;
+margin-top: 0px;
+margin-bottom: 0px;
+}
+#loginshow{
+position: relative;
+        right:15.8vw;
+   }
+#loginsignup{
+        margin-left: 0vw;
+        padding-left: 0px;
+        margin-top: 1vh;
+        justify-content: left;
+        text-align: center;
+        font-size: x-large;
+        font-weight:600;
+    }
+#loginbutton{
+        margin-left: 39%;
+        margin-top: 9vh;
+        margin-bottom: -1vh;
+   }
+@media(max-width:570px){
+    #medlink{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    #main{
+        margin-top: 10vh;
+    }
+    .logininput{
+        margin-left: 0vw;
+   }
+   #loginright{
+        display: none;
+   }
+   #loginleft{
+        width:100vw;
+         }
+   label{
+    width: 100%;
+    text-align: center;
+   }
+      #loginmainleft{
+        margin-top:0px;
+      margin-left:0px ;
+        height: 100vh;
+width: 100vw;
+   }
+   #myloginForm{
+    margin-left: 0px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;   
+   }
+   .loginlabel{
+              width: 10px;
+        position:relative;
+        display: flex;
+        flex-direction: row;
+          }
+  #loginpassword{
+    margin-left: -100px;
+  }
+   #or{
+        margin-left:39%;
+   }
+   #loginbutton{
+        margin-left: 30%;
+   }
+     .loginimage{
+        margin-left: 11%;            
+   }
+   #loginmedlink{
+        margin-top: -2vh;
+        height: 25vw;
+        margin-left: 1vw;  
+   }
+   #loginshow{
+        right:22.8vw;
+       top: -0.5vw;
+   }
+   #loginshowC{
+        right: 3.8vw;
+   }
+   #loginuserid, #loginpassword, #loginCpassword {
+ width: 61vw;
+}
+#loginsignup{
+        margin-left: -1vw;
+        padding-left: 0px;
+        margin-top: 1vh;
+        justify-content: left;
+        text-align: center;
+        font-size: xx-large;
+        font-weight:600;
+        margin-bottom: -1vh;
+    }
+    input{
+        /* margin-left: 15vw; */
+        border-bottom: 1px solid black;
+        margin-bottom: 10px;
+    }
+    label{ 
+        font-size: 15px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+  #heart{
+    margin-left:45vw;
+  }
+  #or{
+    font-size: x-large;
+    display: block;
+ text-align: center;
+ margin-left: -10px;
+  }
+  #loginbutton{
+    margin-left: 38vw;
+  }
+  #passBtn{
+    left: -2vw;
+  }
+}
+@media (max-width: 1030px) and (min-width: 571px) {
+    #loginleft{
+        max-width: 50vw;
+        flex-wrap: wrap;
+    }
+    #loginlink{max-width: 15vw;
+    z-index: 1;
+    }
+    #medlink{
+        height: 150px;
+        width: 10px;
+    }
+    #medlink img{
+       margin-left: 0;
+    }
+    img#hospital {
+        height: 150px;
+    }
+    #loginpassword{
+        margin-top: 0.5vh;
+        /* position:absolute; */
+        z-index: 1
+    }
+    #loginsignup{
+        margin-left: 0vw;
+        padding-left: 0px;
+        margin-top: 1vh;
+        justify-content: left;
+        text-align: center;
+        font-size: x-large;
+        font-weight:600;
+    }
+    #passBtn{
+        display: inline;
+        z-index: 10;
+    }
+    #loginpassword{
+        display: inline;
+    }
+    #loginmedlink{
+        margin-left: 6vw;
+        margin-top: -2vh;
+        height: 11vw;
+    }
+    .logininput{
+        font-size: medium;
+        margin-left: 2vw;
+        width: 25vw;
+    }
+    #loginmainleft{
+        max-width:45vw;
+        width: 45vw;
+    }
+    #loginuserid, #logininput, #loginpassword, #loginCpassword {
+ width: 25vw;
+}
+#loginpassword{
+    padding-bottom: 10px;
+}
+#loginshow{
+    top: 0.3vh;
+ right:4.9vw;
+   }
+   #loginshowC{
+    top:0.1vh;
+        right: 4.9vw;
+   }
+   #loginbutton{
+        margin-left: 30%;
+   }
+   label{
+    font-size: large;
+   }
 }
